--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akash-portfolio-reactjs",
-  "homepage": "https://akashtripathiiiii.github.io/akash-portfolio-reactjs",
+  "homepage": "https://akashtripathi64.github.io/akash-portfolio-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build --repo https://akashtripathi64.github.io/akash-portfolio-reactjs.git",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
