--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akash-portfolio-reactjs",
-  "homepage": "https://akashtripathi64.github.io/akash-portfolio-reactjs",
+  "homepage": "https://akashtripathiiiii.github.io/akash-portfolio-reactjs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
